# HRCHY-CytoCommunity

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: Installation.md  conf.py  index.rst  requirements.txt
docs/api/: api_reference.md
docs/notebooks/: Tutorial_1_CODEX.ipynb  Tutorial_1_MIBITOF.ipynb  Tutorial_2_MERFISH.ipynb  Tutorial_3_CODEX.ipynb  Tutorial_3_MIBITOF.ipynb  Tutorial_4_VisiumBC.ipynb
docs/notebooks/example_data/CODEX/raw/: BALBc-2_CellTypeLabel.txt  BALBc-2_Coordinates.txt  BALBc-2_NodeName.txt  BALBc-2_coarseGT.txt  ImageNameList.txt
docs/notebooks/example_data/MERFISH/raw/: ImageNameList.txt  bregma-0.14_CellTypeLabel.txt  bregma-0.14_NodeAttr.txt  bregma-0.14_NodeName.txt  bregma-0.14_fineGT.txt
docs/notebooks/example_data/MIBI-TOF/raw/: ImageNameList.txt  patient4_CellTypeLabel.txt  patient4_EdgeIndex.txt  patient4_NodeAttr.txt
docs/notebooks/example_data/VisiumBC/raw/: ImageNameList.txt  V1_Breast_Cancer_Block_A_Section_1_CellTypeLabel.txt  (+3 more)
docs/notebooks/results/CODEX/: HyperPara.csv
docs/notebooks/results/MERFISH/: HyperPara.csv
docs/notebooks/results/MIBI-TOF/: HyperPara.csv
docs/source/: index.rst
docs/user_guide/: hyperparameter.md
src/hrchy_cytocommunity/: HRCHYCytoCommunity_run.py  README.md
src/hrchy_cytocommunity/models/: HRCHYCytoCommunity.py  Untitled.ipynb  __init__.py  auto_k.py  dataset.py  net.py
src/hrchy_cytocommunity/tools/: __init__.py  data_preprocessing.py  major_voting.py
src/hrchy_cytocommunity/visualization/: __init__.py  visualization.py
(+1017 files in other folders)
